--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "0.1.0",
   "scripts": {
     "start": "node script.js"
+  },
+  "dependencies": {
+    "line-reader": "^0.4.0"
   }
 }
